# sqrt

./: .gitignore  .travis.yml  CMakeLists.txt  README.md  sqrt.f90
lib/: CMakeLists.txt  newtonraphson.c  newtonraphson.f90
lib/include/: newtonraphson_c.h
libraries/: CMakeLists.txt
libraries/include/: newtonraphson_c.h
libraries/src/: newtonraphson.c  newtonraphson.f90
main/: CMakeLists.txt
main/src/: sqrt.c  sqrt.f90  sqrt.h
src/: sqrt.c
